# nump

./: .gitignore  CMakeLists.txt  fit-trial-data.r  makegif.sh  plot_iteration_times.sh  plot_trial_results.py  rrbtTrials-trial1.yaml  rrbtTrials-trial2.yaml  rrbtTrials-trial3.yaml  rrbtTrials-trial4.yaml  rrbtTrials.yaml  rrtsTrials-trial1.yaml  rrtsTrials-trial2.yaml  rrtsTrials-trial3.yaml  rrtsTrials-trial4.yaml  rrtsTrials.yaml
scenarios/: ball-approach.yaml  bry-and-roy_gap.yaml
src/: BipedRobotModel.cpp  BipedRobotModel.h  Graph.h  RRBT.cpp  RRBT.h  SearchTree.cpp  SearchTree.h  Trajectory.cpp  Trajectory.h  nump.cpp  nump.h  tree.h
src/math/: geometry.cpp  geometry.h
test/: SearchScenario (1).cpp  SearchScenario.cpp  SearchScenario.h  covariance_comparison_tests.cpp  intersection_tests.cpp  numptest.cpp  propogate_tests.cpp  scenario_runner.cpp  tests.h  trajectory_tests.cpp
test/shared/utility/drawing/: SearchTreeDrawing.cpp  SearchTreeDrawing.h  cairo_drawing.cpp  cairo_drawing.h
test/shared/utility/math/: angle.h  distributions.cpp  distributions.h  quadrature.cpp  quadrature.h
test/shared/utility/math/control/: lqr.h
test/shared/utility/math/geometry/: Ellipse.cpp  Ellipse.h
test/shared/utility/math/geometry/intersection/: Intersection.h  TestCircleConfidenceRegionRotatedRectangle.cpp  TestCircleEllipse.cpp  TestCircleRotatedRectangle.cpp  TestRotatedRectangleConfidenceRegionCircle.cpp
